fix z-index of sidenav

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -163,7 +163,6 @@ div.page-wrapper {
     box-shadow: inset 0px -5px 4px 1px #f4f4ef;
     background-color: #fff;
     transition: width 0.4s;
-    z-index: 2;
 
     nav {
       height: 100%;
@@ -267,7 +266,7 @@ div.page-wrapper {
 
   div#side-nav-container.is-expanded {
     width: 200px;
-    z-index: 1;
+    z-index: 2;
     transition: width 0.5s;
     box-shadow: 0px 0px 4px 1px #f4f4ef;
 
